# wirewarden

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  README.md  dev.sh
.claude/: rust-style.md
crates/wirewarden-api/: Cargo.toml
crates/wirewarden-api/migrations/: 20260129000001_create_users.sql  20260129000002_create_user_passkeys.sql  20260129000003_create_vpn_tables.sql  20260129000004_create_webauthn_challenges.sql  20260129000005_add_persistent_keepalive.sql  20260130000001_drop_cidr_prefix.sql  20260130000002_add_preshared_keys.sql  20260131000006_create_wg_peer_psks.sql
crates/wirewarden-api/src/: auth.rs  config.rs  error.rs  extract.rs  main.rs  middleware.rs  webauthn.rs
crates/wirewarden-api/src/db/: mod.rs  user.rs  vpn.rs  webauthn.rs
crates/wirewarden-api/src/routes/: auth.rs  clients.rs  daemon.rs  mod.rs  networks.rs  passkey.rs  server_routes.rs  servers.rs
crates/wirewarden-daemon/: Cargo.toml  build.rs
crates/wirewarden-daemon/src/: api.rs  config.rs  lib.rs  main.rs  netlink.rs  reconcile.rs
crates/wirewarden-daemon/tests/: integration.rs
crates/wirewarden-types/: Cargo.toml
crates/wirewarden-types/src/: daemon.rs  lib.rs
doc/: daemon.md  wirewarden-daemon.service
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.scss  App.tsx  api.ts  index.scss  main.tsx  router.tsx
frontend/src/components/: DnsListEditor.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: ClientDetailPage.tsx  DashboardPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  NetworkDetailPage.tsx  NetworksPage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  ServerDetailPage.tsx  SettingsPage.tsx  auth.scss  settings.scss  vpn.scss
