[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Joey"]

[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
serde_json = "1"
test-case = "3"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "net", "sync", "time", "fs", "io-util"]

[workspace.dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[workspace.dependencies.chrono]
version = "0.4"
features = ["serde"]

[profile.release]
lto = "fat"
codegen-units = 1

[profile.distribute]
inherits = "release"
strip = "symbols"
