[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Joey"]
license = "AGPL-3.0-only"

[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
serde_json = "1"
test-case = "3"
dotenvy = "0.15"
dashmap = "6"
ipnetwork = "0.20"

[workspace.dependencies.openssl]
version = "0.10"
features = ["vendored"]

[workspace.dependencies.webauthn-rs]
version = "0.5"
features = ["danger-allow-state-serialisation", "conditional-ui"]

[workspace.dependencies.x25519-dalek]
version = "2"
features = ["static_secrets"]

[workspace.dependencies.aes-gcm]
version = "0.10"

[workspace.dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "json", "ipnetwork"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "net", "sync", "time", "fs", "io-util", "signal"]

[workspace.dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[workspace.dependencies.chrono]
version = "0.4"
features = ["serde"]

[profile.release]
lto = "fat"
codegen-units = 1

[profile.distribute]
inherits = "release"
strip = "symbols"
