[package]
name = "wirewarden-api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
wirewarden-types = { path = "../wirewarden-types" }
actix-web = "4"
tracing-actix-web = "0.7"
argon2 = "0.5"
dotenvy.workspace = true
sqlx.workspace = true
jsonwebtoken = "10"
webauthn-rs.workspace = true
dashmap.workspace = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "json"]

[dev-dependencies]
test-case.workspace = true
