[package]
name = "wirewarden-api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
wirewarden-types = { path = "../wirewarden-types" }
actix-web = "4"
tracing-actix-web = "0.7"
argon2 = "0.5"
dotenvy.workspace = true
sqlx.workspace = true
webauthn-rs.workspace = true
dashmap.workspace = true
ipnetwork.workspace = true
x25519-dalek.workspace = true
aes-gcm.workspace = true
rand = "0.8"
base64 = "0.22"
futures = "0.3"

[dependencies.jsonwebtoken]
version = "10"
features = ["rust_crypto"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "json"]

[dev-dependencies]
test-case.workspace = true
