[package]
name = "wirewarden-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
wirewarden-types = { path = "../wirewarden-types" }
toml = "0.8"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "json"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dev-dependencies]
test-case.workspace = true
